[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/enemy.png" type="Texture" id=1]
[ext_resource path="res://fireball_enemy.gd" type="Script" id=2]
[ext_resource path="res://slime_001.ogg" type="AudioStream" id=3]
[ext_resource path="res://explosionCrunch_000.ogg" type="AudioStream" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[node name="fireball_enemy" type="Area2D"]
position = Vector2( 755.116, 0 )
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 4, 4 )
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="slime" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0
autoplay = true
max_distance = 200.0

[node name="timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -35.296, 0 )

[node name="fireball" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -16, -16, 32, 32 )

[connection signal="area_entered" from="." to="." method="_on_still_enemy_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_still_enemy_body_entered"]
[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
